testData/diagnostics/assign_to_expr.diag.txt
testData/diagnostics/assign_to_expr.nut line = (2) column = (0) : error: can't assign to expression
local x
x-- = 1
^--

